More logging tweaks